[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["Jon Husen <jon.husen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pywinrm = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
