[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["Jon Husen <jon.husen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pywinrm = {extras = ["kerberos"], version = "^0.4.3"}
fastui = "^0.6.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pytest = "^8.2.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
